// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live validator snapshot validation should match for one of missing 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Missing required property: audience",
        "params": Array [
          "audience",
        ],
        "pathsInPayload": Array [
          "properties/options/0/restriction",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ContentKeyPolicyTokenRestriction",
          "position": Object {
            "column": 41,
            "line": 446,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_CASE_MISMATCH 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Enum does not match case for: System",
        "params": Array [
          "System",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/type",
        ],
        "severity": 1,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_MISMATCH 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "message": "No enum match for: dasda",
        "params": Array [
          "dasda",
        ],
        "pathsInPayload": Array [
          "properties/state",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": Object {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "message": "No enum match for: banana",
        "params": Array [
          "banana",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/type",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_FORMAT 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Object didn't pass validation for format date-time: 0001-01-01T00:00:00",
        "params": Array [
          "date-time",
          "0001-01-01T00:00:00",
        ],
        "pathsInPayload": Array [
          "properties/createdAtUtc",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/createdAtUtc",
          "position": Object {
            "column": 25,
            "line": 903,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_TYPE 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Expected type array but found type string",
        "params": Array [
          "array",
          "string",
        ],
        "pathsInPayload": Array [
          "properties/hostnameConfigurations",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/hostnameConfigurations",
          "position": Object {
            "column": 35,
            "line": 934,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MAX_LENGTH 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MAX_LENGTH",
        "documentationUrl": "",
        "inner": undefined,
        "message": "String is too long (1958 chars), maximum 1000",
        "params": Array [
          1958,
          1000,
        ],
        "pathsInPayload": Array [
          "properties/description",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/OperationEntityBaseContract/properties/description",
          "position": Object {
            "column": 24,
            "line": 4071,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_ADDITIONAL_PROPERTIES 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Additional properties not allowed: id",
        "params": Array [
          "id",
        ],
        "pathsInPayload": Array [
          "properties/groups/0",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_MISSING_REQUIRED_PROPERTY 1`] = `
Object {
  "errors": Array [],
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "message": "Missing required property: displayName",
        "params": Array [
          "displayName",
        ],
        "pathsInPayload": Array [
          "properties/groups/0",
        ],
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;
